<resources>
    <string name="app_name">kursovoi</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_hint">Don\'t have an account? Register here</string>
    <string name="login_hint">Already have an account? Login here</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
</resources>